mockito-inline para mockar objetos estáticos